--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "spread-diff-patch",
   "version": "1.0.0",
   "description": "Diff & patch spreadsheet files",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,7 +22,21 @@
     "url": "https://github.com/dev-DTECH/spread-diff-patch/issues"
   },
   "homepage": "https://github.com/dev-DTECH/spread-diff-patch#readme",
+  "type": "module",
   "dependencies": {
-    "xlsx": "^0.18.5"
+    "@types/papaparse": "^5.3.14",
+    "papaparse": "^5.4.1",
+    "tsup": "^8.0.2",
+    "typescript-eslint": "^7.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
