--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "spread-diff-patch",
-  "version": "1.0.2",
-  "description": "Diff & patch spreadsheet files",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "version": "1.0.3",
+  "description": "Diff & patch SpreadSheet files",
+  "main": "./lib/index.js",
+  "module": "./lib/index.mjs",
+  "types": "./lib/index.d.ts",
   "files": [
-    "dist"
+    "lib"
   ],
   "scripts": {
     "build": "tsup",
