Added HTML Formatter

--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
   ],
   "dependencies": {
     "@types/papaparse": "^5.3.14",
+    "escape-html": "^1.0.3",
     "papaparse": "^5.4.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
